Updated Catalan translations

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -1,6 +1,6 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-01-02
-; by Markitus95
+; last updated: 2016-03-06
+; by Marc Riera Irigoyen
 
 [program]
 title = openBVE
@@ -235,7 +235,7 @@ quality_interpolation_transparency_smooth = Suau
 quality_distance = Efectes de distància
 quality_distance_viewingdistance = Distància visible:
 quality_distance_viewingdistance_meters = m
-quality_distance_motionblur = Arrossegament de la imatge:
+quality_distance_motionblur = Motion blur:
 quality_distance_motionblur_none = Desactivat
 quality_distance_motionblur_low = Baix
 quality_distance_motionblur_medium = Mitjà
@@ -263,7 +263,7 @@ advanced = Opcions avançades
 advanced_load_advance = Precàrrega
 advanced_disable_displaylists = Desactiva les llistes de pantalla de l'OpenGL
 advanced_timefactor = Factor de temps accelerat
-advanced_unload_textures = Unload unused textures
+advanced_unload_textures = Descarrega les textures sense ús
 
 [dialog]
 csvfiles = Fitxers CSV
@@ -325,7 +325,7 @@ station_arrival_early = Heu arribat a [name] amb [time] d'antelació.
 station_overrun = Heu aturat el tren [difference] m després del punt de parada.
 station_underrun = Heu aturat el tren [difference] m abans del punt de parada.
 station_terminal = Aquesta és l'estació terminal.
-station_deadline = La sortida serà en [time].
+station_deadline = La sortida està prevista en [time].
 station_security = Activeu [system].
 station_correct = Corregiu la posició de parada.
 station_depart_closedoors = Embarcament completat. Ara podeu tancar les portes.
@@ -392,9 +392,9 @@ quit = Surt
 quit_question = Segur que voleu sortir?
 quit_no = No
 quit_yes = Sí
-back = ← Back
-customize_controls = Customise controls
-assign = Please press any key or move a joystick axis to set this control...
+back = ← Enrere
+customize_controls = Personalitza els controls
+assign = Premeu qualsevol tecla o moveu un eix d'un joystick per configurar aquest control...
 
 ; ----- quick reference -----
 
