Updated Spanish translations

--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -1,6 +1,6 @@
 ﻿; openBVE interface language configuration file
-; last updated: 2016-01-02
-; by Markitus95
+; last updated: 2016-03-06
+; by Marc Riera Irigoyen
 
 [program]
 title = openBVE
@@ -14,7 +14,7 @@ flag = ES.png
 [panel]
 start = Nueva partida
 review = Analizar última partida
-getaddons = Get Add-ons
+getaddons = Extensiones
 controls = Controles
 options = Opciones
 homepage = Visitar página oficial
@@ -43,13 +43,13 @@ sound_openal_version = Se necesita OpenAL 1.1. Parece que la versión actual es 
 sound_openal_context = No se pudo crear el contexto OpenAL.
 sound_openal_device = No se pudo abrir el dispositivo de sonido OpenAL.
 fullscreen_switch1 = Error al cambiar al modo de pantalla completa.
-fullscreen_switch2 = Please check your fullscreen resolution settings.
+fullscreen_switch2 = Compruebe la configuración de resolución de pantalla completa.
 
 [start]
 title = Nueva partida
 route = Ruta
 route_selection = Selección
-route_addons = Add-ons
+route_addons = Extensiones
 route_browse = Examinar
 route_recently = Seleccionada anteriormente
 route_details = Detalles
@@ -57,11 +57,11 @@ route_description = Descripción
 route_map = Mapa
 route_gradient = Gradiente
 route_settings = Configuración
-route_settings_encoding = Codificaión:
+route_settings_encoding = Codificación:
 route_settings_encoding_preview = Vista previa:
 train = Tren
 train_selection = Selección
-train_addons = Add-ons
+train_addons = Extensiones
 train_browse = Examinar
 train_recently = Seleccionado anteriormente
 train_default = Predeterminado por la ruta
@@ -108,45 +108,45 @@ blackbox_format_text = Texto formateado
 blackbox_export = Exportar...
 
 [getaddons]
-title = Get Add-ons
-filter = Filter:
-filter_routes = Routes
-filter_trains = Trains
-filter_libraries = Libraries
-filter_sharedlibraries = Shared libraries
-filter_nowips = No WIPs
-filter_onlyupdates = Only updates
-package = Package details
-package_install = Install
-package_install_progress = Installing add-ons...
-package_install_download = Downloading add-ons...
-package_install_failure = The following packages could not be installed:
-package_remove = Remove
-package_remove_progress = Removing add-ons...
-package_remove_failure = The following packages could not be removed:
-package_country = Country:\x20
-package_city = City:\x20
-package_operator = Operator:\x20
-package_fictional = Fictional
-package_author = Author:\x20
-package_version_latest = Latest version:\x20
-package_version_installed = Installed version:\x20
-screenshot_previous = Previous
-screenshot_next = Next
-connect = Connecting to server...
-connect_error = Could not load the database obtained from the server:
-connect_failure = Could not connect to server.
-updates = Updates for some of your add-ons are available.
-updates_install = Updates for some of your add-ons are available. Do you want to install them now?
-updates_nomore = No more updates are available.
-other_countries = Other Countries
-other_cities = Other Cities
-other_operators = Other Operators
-suggest_1 = The following packages are suggested by your selection:
-suggest_2 = Do you want to install these packages as well?
-redundant_1 = The following packages will no longer function properly or will be no longer needed after you remove the selected add-on:
-redundant_2 = Do you want to remove these packages as well?
-confirmation = In order to install the selected add-on, a total of [size] has to be downloaded. Do you want to proceed?
+title = Obtener extensiones
+filter = Filtro:
+filter_routes = Rutas
+filter_trains = Trenes
+filter_libraries = Bibliotecas
+filter_sharedlibraries = Bibliotecas compartidas
+filter_nowips = Solo versiones acabadas
+filter_onlyupdates = Solo actualizaciones
+package = Detalles del paquete
+package_install = Instalar
+package_install_progress = Instalando las extensiones...
+package_install_download = Descargando las extensiones...
+package_install_failure = No se han podido instalar los paquetes siguientes:
+package_remove = Eliminar
+package_remove_progress = Eliminando extensiones...
+package_remove_failure = No se han podido eliminar los paquetes siguientes:
+package_country = País:\x20
+package_city = Ciudad:\x20
+package_operator = Operador:\x20
+package_fictional = Ficticia
+package_author = Autor:\x20
+package_version_latest = Última versión:\x20
+package_version_installed = Versión instalada:\x20
+screenshot_previous = Atrás
+screenshot_next = Siguiente
+connect = Conectando con el servidor...
+connect_error = No se ha podido cargar la base de datos obtenida del servidor:
+connect_failure = No se ha podido conectar con el servidor.
+updates = Hay actualizaciones disponibles para algunas extensiones.
+updates_install = Hay actualizaciones disponibles para algunas extensiones. ¿Desea instalarlas ahora??
+updates_nomore = No hay más actualizaciones disponibles.
+other_countries = Otros países
+other_cities = Otras ciudades
+other_operators = Otros operadores
+suggest_1 = Paquetes recomendados según la selección:
+suggest_2 = ¿Desea instalarlos también?
+redundant_1 = Los paquetes siguientes no funcionarán correctamente o no seran necesarios después de eliminar la extensión siguiente:
+redundant_2 = ¿Desea eliminarlos también?
+confirmation = Para instalar la extensión seleccionada, se descargarán [size]. ¿Desea continuar?
 
 [controls]
 title = Controles
@@ -263,7 +263,7 @@ advanced = Opciones avanzadas
 advanced_load_advance = Precargar
 advanced_disable_displaylists = Desactivar las listas de pantalla de OpenGL
 advanced_timefactor = Factor de tiempo acelerado
-advanced_unload_textures = Unload unused textures
+advanced_unload_textures = Descargar texturas sin uso
 
 [dialog]
 csvfiles = Archivos CSV
@@ -349,8 +349,8 @@ notavailableexpert = Esta opción no está disponible en el modo experto.
 aiunable = Puede que la IA no sea capaz de controlar totalmente este tren.
 camerarestriction_on = Restricción de cámara: sí
 camerarestriction_off = Restricción de cámara: no
-mousegrab_on = Mouse grab: on
-mousegrab_off = Mouse grab: off
+mousegrab_on = Ratón: sí
+mousegrab_off = Ratón: no
 
 [score]
 overspeed = Exceso de velocidad
@@ -392,9 +392,9 @@ quit = Cerrar
 quit_question = ¿Realmente desea salir?
 quit_no = No
 quit_yes = Sí
-back = ← Back
-customize_controls = Customise controls
-assign = Please press any key or move a joystick axis to set this control...
+back = ← Atrás
+customize_controls = Personalizar controles
+assign = Pulse cualquier tecla o mueva un eje de un joystick para configurar este control...
 
 ; ----- quick reference -----
 
@@ -402,7 +402,7 @@ assign = Please press any key or move a joystick axis to set this control...
 ats = ATS
 atsoperation = ATS ENCENDIDO
 atsppower = P POWER
-atsppattern = PTN APPROACH
+atsppattern = BALIZA
 atspbrakeoverride = LIBERAR FRENOS
 atspbrakeoperation = APLICAR FRENOS
 atsp = ATS-P
