Update Czech translation

--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -1,6 +1,6 @@
 ﻿; Čeština pro openBVE
-; poslední aktualizace: 2011-12-21
-;verze: 1.3.3.0
+; poslední aktualizace: 2016-03-08
+;verze: 1.4.40.1402
 
 [program]
 title = openBVE
@@ -31,19 +31,19 @@ expert = Profesionál
 unknown = Neznámý
 
 [errors]
-critical_file = A critical error occured whilst parsing the [file] file
-filesystem_invalid = The file system configuration could not be accessed or is invalid due to the following reason:
-warning = Warning:
-controls_missing = No control configuration files found.
-controls_oldversion = An older key-configuration file was found.
-controls_reset = The current key-configuration has been reset to defaults.
-controls_default_oldversion = The default key assingment file is an older version or corrupt.
-controls_default_missing = The default key assignment file does not exist.
-sound_openal_version = OpenAL 1.1 is required. You seem to have version 1.0.
-sound_openal_context = The OpenAL context could not be created.
-sound_openal_device = The OpenAL sound device could not be opened.
-fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
-fullscreen_switch2 = Please check your fullscreen resolution settings.
+critical_file = Vyskytla se závažná chyba při parsování souboru [file]
+filesystem_invalid = Nastavení systému nemohlo být načteno z následujícího důvodu:
+warning = Varování:
+controls_missing = Nenalezeno nastavení ovládacích prvků.
+controls_oldversion = Bylo nalezeno staré nastavení ovládacích prvků.
+controls_reset = Nastavení ovládacích prvků bylo nastaveno na výchozí hodnoty.
+controls_default_oldversion = Nalezená verze výchozího nastavení ovládacích prvků je starší verze nebo je poškozena.
+controls_default_missing = Výchozí nastavení ovládacích prvků nebylo nalezeno.
+sound_openal_version = Pro běh hry je potřeba OpenAL 1.1. Vypadá to, že máte pouze verzi 1.0.
+sound_openal_context = OpenAL kontext nemohl být vytvořen.
+sound_openal_device = Zvukové zařízení OpenAL nemohlo být otevřeno.
+fullscreen_switch1 = Vyskytla se chyba při přepínání do zobrazení celé obrazovky.
+fullscreen_switch2 = Prosím zkontrolujte příslušné nastavené rozlišení v nastavení.
 
 [start]
 title = Spustit novou hru
@@ -72,7 +72,7 @@ train_settings = Nastavení
 train_settings_encoding = Kódování:
 train_settings_encoding_preview = Náhled:
 train_notfound = Vlak přidružený k trati nenalezen.
-train_pluginnotsupported = --- This train uses a safety system plugin which cannot be used on your operating system. The built-in safety systems ATS/ATC will be used instead, which might cause operational problems. ---
+train_pluginnotsupported = --- Tento vlak používá zásuvný modul zabezpečovacího systému, který nemůže být použit na vašem systému. Vestavěné systémy ATS/ATC budou použity místo něj, což může způsobit problémy při řízení. ---
 start = Spusť
 start_mode = Obtížnost řízení:
 start_start = Spusť
@@ -153,15 +153,15 @@ title = Nastavení ovládacích prvků
 list_command = Příkaz
 list_type = Typ
 list_type_digital = Digital
-list_type_analoghalf = Analog (half axis)
-list_type_analogfull = Analog (full axis)
+list_type_analoghalf = Analog (půl osy)
+list_type_analogfull = Analog (celá osa)
 list_description = Popis
 list_assignment = Přiřazení
 add = Přidat prvek
 remove = Odebrat prvek
 import = Import...
 export = Export...
-reset = Reset to defaults
+reset = Obnovit na výchozí
 up = Posun nahoru
 down = Posun dolu
 selection = Aktuálně vybraný příkaz
@@ -228,7 +228,7 @@ quality_interpolation_mode_bilinearmipmap = Bilineární (mipmapping)
 quality_interpolation_mode_trilinearmipmap = Trilineární (mipmapping)
 quality_interpolation_mode_anisotropic = Anisotropní filtrování
 quality_interpolation_anisotropic_level = Úroveň anisotropního filtrování:
-quality_interpolation_antialiasing_level = Level of anti-aliasing:
+quality_interpolation_antialiasing_level = Úroveň anti-aliasingu:
 quality_interpolation_transparency = Prolínání:
 quality_interpolation_transparency_sharp = Ostré
 quality_interpolation_transparency_smooth = Hladké
@@ -249,7 +249,7 @@ misc_simulation_blackbox = Černá skříňka
 misc_controls = Ovládací prvky
 misc_controls_joysticks = Joystick
 misc_controls_threshold = Citlivost:
-misc_controls_ebaxis = Allow EB on brake axis
+misc_controls_ebaxis = Povolit EB na brzdové ose
 misc_sound = Zvuk
 misc_sound_range = Vzdálenostní dosah:
 misc_sound_range_low = Krátký
@@ -259,11 +259,11 @@ misc_sound_number = Počet povolených zvuků:
 verbosity = Pro vývojáře
 verbosity_warningmessages = Ukázat výstražné zprávy
 verbosity_errormessages = Ukázat chybové zprávy
-advanced = Advanced Options
-advanced_load_advance = Load in advance
-advanced_disable_displaylists = Disable OpenGL display lists
-advanced_timefactor = Accelerated Time Factor
-advanced_unload_textures = Unload unused textures
+advanced = Pokročilá nastavení
+advanced_load_advance = Načíst předem
+advanced_disable_displaylists = Zakázat OpenGL display listy
+advanced_timefactor = Zrychlení času
+advanced_unload_textures = Uvolnit nepoužité textury
 
 [dialog]
 csvfiles = CSV soubory
@@ -395,6 +395,7 @@ quit_yes = Ano
 back = ← Back
 customize_controls = Customise controls
 assign = Please press any key or move a joystick axis to set this control...
+assign = Stiskněte klávesu nebo pohněte pákou joystickem pro nastavení tohoto prvku...
 
 ; ----- quick reference -----
 
@@ -523,7 +524,7 @@ MISC_CPUMODE = Změna zatížení CPU
 DEBUG_WIREFRAME = Activace/deaktivace zobrazení síťového modelu
 DEBUG_NORMALS = Zobrazit/skrýt normálové vektory
 DEBUG_BRAKE = Zobrazit/skrýt stav brzd
-ROUTE_INFORMATION = Shows or hides the route information window
+ROUTE_INFORMATION = Zobrazit/skrýt okno informací o trati
 
 ; ----- keys -----
 
