Route map/gradient images as in-game overlay
The route map and gradient profile (F8), currently displayed in an external window, are moved into the simulation window as overlay.

- Partially transparent (background about 20%, drawings about 50%).
- Fixed size (500 x 500 as before). The image is not scaled, to avoid visual artifacts and worsened legibility.
- Colour scheme changed to match the dark background.
- F8 now cycles through None | Map | Gradient | None again.
- A moving red dot (map) | white vert. line (gradient) marks the current position of the train.
- The 'old' image generation (for 'system' windows, with original colour scheme) is left in place and a new parameter allows to select the kind of image to generate.
- All colours and sizes and factored-out and put at the beginning as constants.

--- a/openBVE/OpenBve/OpenBve.csproj
+++ b/openBVE/OpenBve/OpenBve.csproj
@@ -109,6 +109,7 @@
       <DependentUpon>formRouteInformation.cs</DependentUpon>
     </Compile>
     <Compile Include="Game\RouteInformation.cs" />
+    <Compile Include="Game\RouteInfoOverlay.cs" />
     <Compile Include="Game\Information.cs" />
     <Compile Include="Game\Menu.cs" />
     <Compile Include="Game\RouteConstants.cs" />
