--- a/openBVE/OpenBveApi/OpenBveApi.csproj
+++ b/openBVE/OpenBveApi/OpenBveApi.csproj
@@ -50,7 +50,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.Targets" />
   <ItemGroup>
     <Reference Include="SharpCompress.Unsigned">
-      <HintPath>C:\Users\leeze_000\Desktop\sharpcompress-master\bin\SharpCompress.Unsigned.dll</HintPath>
+      <HintPath>..\..\Dependencies\SharpCompress.Unsigned.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Drawing" />
