Joystick detection improvements: * Add option to options.cfg - preferNativeBackend, as by default OpenTK will exclusively use SDL2 where available. * Add error & string for OS-X and SDL2 platforms informing users that they should use the in-game joystick configuration menu.
https://github.com/leezer3/OpenBVE/issues/57

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -39,6 +39,7 @@ controls_oldversion = S'ha trobat un fitxer antic de configuració de controls.
 controls_reset = S'ha reiniciat la configuració de controls actual als valors per defecte.
 controls_default_oldversion = El fitxer de configuració de controls per defecte es troba en una versió antiga o està corromput.
 controls_default_missing = El fitxer de configuració de controls per defecte no existeix.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = Es necessita l'OpenAL 1.1. Sembla que teniu la versió 1.0.
 sound_openal_context = No s'ha pogut crear el context OpenAL.
 sound_openal_device = No s'ha pogut obrir el dispositiu de so OpenAL.
