--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -39,6 +39,7 @@ controls_oldversion = Bylo nalezeno staré nastavení ovládacích prvků.
 controls_reset = Nastavení ovládacích prvků bylo nastaveno na výchozí hodnoty.
 controls_default_oldversion = Nalezená verze výchozího nastavení ovládacích prvků je starší verze nebo je poškozena.
 controls_default_missing = Výchozí nastavení ovládacích prvků nebylo nalezeno.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = Pro běh hry je potřeba OpenAL 1.1. Vypadá to, že máte pouze verzi 1.0.
 sound_openal_context = OpenAL kontext nemohl být vytvořen.
 sound_openal_device = Zvukové zařízení OpenAL nemohlo být otevřeno.
