--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -39,6 +39,7 @@ controls_oldversion = Tastaturkonfiguration einer älteren Programmversion gefun
 controls_reset = Die Tastatureinstellungen wurden auf Voreinstellungen zurückgesetzt.
 controls_default_oldversion = Die Standardtastatureinstellungsdatei ist für eine ältere Programmversion.
 controls_default_missing = Die Standardtastatureinstellungsdatei ist nicht vorhanden.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = OpenAL 1.1 wird benötigt; es scheint OpenAL 1.0 vorhanden zu sein.
 sound_openal_context = Der 'OpenAL context' konnte nicht eröffnet werden.
 sound_openal_device = Das 'OpenAL sound device' konnte nicht geöffnet werden.
