--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -39,6 +39,7 @@ controls_oldversion = Se ha encontrado un archivo antiguo de configuración de c
 controls_reset = Se ha reiniciado la configuración de controles actual a los valores por defecto.
 controls_default_oldversion = El archivo de configuración de controles por defecto se encuentra en una versión antigua o está dañado.
 controls_default_missing = El archivo de configuración de controles por defecto no existe.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = Se necesita OpenAL 1.1. Parece que la versión actual es 1.0.
 sound_openal_context = No se pudo crear el contexto OpenAL.
 sound_openal_device = No se pudo abrir el dispositivo de sonido OpenAL.
