--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -39,6 +39,7 @@ controls_oldversion = Trovato un file di configurazione della tastiera relativo 
 controls_reset = File di configurazione della tastiera reimpostato alle impostazioni predefinite.
 controls_default_oldversion = Il file predefinito di configurazione della tastiera è obsoleto o non valido.
 controls_default_missing = Il file predefinito di configurazione della tastiera non esiste.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = Richiesto OpenAL 1.1. Sembra essere istallata la versione 1.0.
 sound_openal_context = Impossibile creare il contesto OpenAL.
 sound_openal_device = Impossibile aprire il dispositivo per il suono OpenAL.
