--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -39,6 +39,7 @@ controls_oldversion = Znaleziono konfigurację klawiszy starej wersii programu.
 controls_reset = Aktualna konfiguracja klawiszy została przywrócona do domyślnej.
 controls_default_oldversion = Plik domyślnej konfiguracji klawiszy należy do starej wersii programu.
 controls_default_missing = Plik domyślnej konfiguracji klawiszy nie istnieje.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = Wymagane jest OpenAL 1.1. Zdajesz się mieć wersię 1.0.
 sound_openal_context = Nie udało się utworzyć 'OpenAL context'.
 sound_openal_device = Nie udało się otworzyć 'OpenAL sound device'.
