--- a/openBVE/OpenBve/Data/Languages/zh-TW.cfg
+++ b/openBVE/OpenBve/Data/Languages/zh-TW.cfg
@@ -39,6 +39,7 @@ controls_oldversion = An older key-configuration file was found.
 controls_reset = The current key-configuration has been reset to defaults.
 controls_default_oldversion = The default key assingment file is an older version or corrupt.
 controls_default_missing = The default key assignment file does not exist.
+controls_ingame = You are currently running on the [platform] backend. Please use the in-game menu to configure any joystick based controls.
 sound_openal_version = OpenAL 1.1 is required. You seem to have version 1.0.
 sound_openal_context = The OpenAL context could not be created.
 sound_openal_device = The OpenAL sound device could not be opened.
