Packages: * Move strings to en-GB translation file. * Use a single function to hide all installer panels, before showing the one we want.
TODO:
* UI getting better, but still unfinished.
* Save package as (Currently just dumped into a fixed temp folder)
* Select files upon package creation.
* Other language translations. **TRANSLATORS??**
* Code cleanup......
* XML serialize the package lists

--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -107,46 +107,27 @@ blackbox_format_csv = Comma-separated value
 blackbox_format_text = Formatted text
 blackbox_export = Export...
 
-[getaddons]
-title = Get Add-ons
-filter = Filter:
-filter_routes = Routes
-filter_trains = Trains
-filter_libraries = Libraries
-filter_sharedlibraries = Shared libraries
-filter_nowips = No works in progress
-filter_onlyupdates = Show only updates
-package = Package details
-package_install = Install
-package_install_progress = Installing add-ons...
-package_install_download = Downloading add-ons...
-package_install_failure = The following packages could not be installed:
-package_remove = Remove
-package_remove_progress = Removing add-ons...
-package_remove_failure = The following packages could not be removed:
-package_country = Country:\x20
-package_city = City:\x20
-package_operator = Operator:\x20
-package_fictional = Fictional
-package_author = Author:\x20
-package_version_latest = Latest version:\x20
-package_version_installed = Installed version:\x20
-screenshot_previous = Previous
-screenshot_next = Next
-connect = Connecting to server...
-connect_error = Could not load the database obtained from the server:
-connect_failure = Could not connect to server.
-updates = Updates for some of your add-ons are available.
-updates_install = Updates for some of your add-ons are available. Do you want to install them now?
-updates_nomore = No more updates are available.
-other_countries = Other Countries
-other_cities = Other Cities
-other_operators = Other Operators
-suggest_1 = The following packages are suggested by your selection:
-suggest_2 = Do you want to install these packages as well?
-redundant_1 = The following packages will no longer function properly or will be no longer needed after you remove the selected add-on:
-redundant_2 = Do you want to remove these packages as well?
-confirmation = In order to install the selected add-on, a total of [size] has to be downloaded. Do you want to proceed?
+[packages]
+selection_none = No package selected.
+selection_none_website = No website provided.
+install = Install
+install_header = Install a Package
+install_invalid = This file does not appear to be a valid openBVE package.
+install_version_new = The selected package is already installed, and is a newer version.
+install_version_old = The selected package is already installed, and is an older version.
+install_version_same = The selected package is already installed, and is an identical version.
+install_success = Package installation was successful.
+install_success_header = Installation Successful
+install_success_files = A list of files installed is shown below:
+creation_header = Enter Package Details
+creation_name = Please enter a package name.
+creation_author = Please enter a package author.
+creation_description = Please enter a package description.
+creation_version = Please enter a valid package version number in the following format: \r\n 1.0.0
+creation_success = Package creation was successful.
+creation_success_header = Package Creation Successful
+creation_success_files = The following files were added to your package:
+database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
 title = Customize controls
