Fix: A routefile with a missing WithTrack section could cause an infinite loop.

--- a/openBVE/OpenBve/Data/Languages/ca-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/ca-ES.cfg
@@ -45,6 +45,7 @@ sound_openal_context = No s'ha pogut crear el context OpenAL.
 sound_openal_device = No s'ha pogut obrir el dispositiu de so OpenAL.
 fullscreen_switch1 = S'ha produït un error en canviar al mode de pantalla completa. 
 fullscreen_switch2 = Comproveu la configuració de resolució de pantalla completa.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Inicia una nova partida
