--- a/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
+++ b/openBVE/OpenBve/Data/Languages/cs-CZ.cfg
@@ -45,6 +45,7 @@ sound_openal_context = OpenAL kontext nemohl být vytvořen.
 sound_openal_device = Zvukové zařízení OpenAL nemohlo být otevřeno.
 fullscreen_switch1 = Vyskytla se chyba při přepínání do zobrazení celé obrazovky.
 fullscreen_switch2 = Prosím zkontrolujte příslušné nastavené rozlišení v nastavení.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Spustit novou hru
