--- a/openBVE/OpenBve/Data/Languages/de-CH.cfg
+++ b/openBVE/OpenBve/Data/Languages/de-CH.cfg
@@ -45,6 +45,7 @@ sound_openal_context = Der 'OpenAL context' konnte nicht eröffnet werden.
 sound_openal_device = Das 'OpenAL sound device' konnte nicht geöffnet werden.
 fullscreen_switch1 = Beim Versuch, in den Vollbildmodus zu wechseln, ist ein Fehler aufgetreten.
 fullscreen_switch2 = Bitte die eingestellte Vollbildauflösung kontrollieren.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Neues Spiel starten
