--- a/openBVE/OpenBve/Data/Languages/es-ES.cfg
+++ b/openBVE/OpenBve/Data/Languages/es-ES.cfg
@@ -45,6 +45,7 @@ sound_openal_context = No se pudo crear el contexto OpenAL.
 sound_openal_device = No se pudo abrir el dispositivo de sonido OpenAL.
 fullscreen_switch1 = Error al cambiar al modo de pantalla completa.
 fullscreen_switch2 = Compruebe la configuración de resolución de pantalla completa.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Nueva partida
