--- a/openBVE/OpenBve/Data/Languages/it-IT.cfg
+++ b/openBVE/OpenBve/Data/Languages/it-IT.cfg
@@ -45,6 +45,7 @@ sound_openal_context = Impossibile creare il contesto OpenAL.
 sound_openal_device = Impossibile aprire il dispositivo per il suono OpenAL.
 fullscreen_switch1 = Errore durante il tentativo di passare a schermo intero.
 fullscreen_switch2 = Controllare le impostazione per lo schermo intero.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Avvio nuovo gioco
