--- a/openBVE/OpenBve/Data/Languages/pl-PL.cfg
+++ b/openBVE/OpenBve/Data/Languages/pl-PL.cfg
@@ -45,6 +45,7 @@ sound_openal_context = Nie udało się utworzyć 'OpenAL context'.
 sound_openal_device = Nie udało się otworzyć 'OpenAL sound device'.
 fullscreen_switch1 = Wystąpił błąd przy próbie przejścia w tryb pełnoekranowy.
 fullscreen_switch2 = Proszę sprawdzić swoje ustawienia rozdzielczości trybu pełnoekranowego.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Nowa gra
