--- a/openBVE/OpenBve/Data/Languages/ro-RO.cfg
+++ b/openBVE/OpenBve/Data/Languages/ro-RO.cfg
@@ -45,6 +45,7 @@ sound_openal_context = The OpenAL context could not be created.
 sound_openal_device = The OpenAL sound device could not be opened.
 fullscreen_switch1 = An error occured whilst attempting to switch to fullscreen mode. 
 fullscreen_switch2 = Please check your fullscreen resolution settings.
+route_corrupt_withtrack = The selected route is corrupt: \r\n WithTrack section missing.
 
 [start]
 title = Joc Nou
