--- a/openBVE/OpenBve/Data/Languages/en-GB.cfg
+++ b/openBVE/OpenBve/Data/Languages/en-GB.cfg
@@ -119,6 +119,7 @@ install_version_same = The selected package is already installed, and is an iden
 install_success = Package installation was successful.
 install_success_header = Installation Successful
 install_success_files = A list of files installed is shown below:
+install_select = Select Package......
 creation_header = Enter Package Details
 creation_name = Please enter a package name.
 creation_author = Please enter a package author.
@@ -127,6 +128,7 @@ creation_version = Please enter a valid package version number in the following 
 creation_success = Package creation was successful.
 creation_success_header = Package Creation Successful
 creation_success_files = The following files were added to your package:
+creation_proceed = Proceed......
 database_save_error = An error occured whilst saving the package database. \r\n Please check for write permissions.
 
 [controls]
